tooling/nargo_cli/tests/snapshots/execute__tests__prelude_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "7888170613770555599",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/92ZbW7TQBCG14kdcCCSBX8rzuDUDgn/IuGQ70/gAKYhEn8QQhwgJ+BsHIla8tjb6aRN6neExUiRY4/7zOx6ZveN65jSnPzomgpGkD/50c+PDcvfvP0M8/OwmnV9FhfJH4S9ni+MD5h/5OdMR4cfEl9p/sNnOefzseTbY6G4z28/L6zvb0xZH1rjp+enOf7XD4yZauf9sfQZ8LPNLDnenXsM//qa+CMd/g3xP6jwoyL/sQ4/Jf5Ehf82Jv5Uh1+sbTMdfp/4cx3+gPgLHf474i91+F+Iv9LhF/211uF/Jf5Ghd8v+nerw4+Iv9PhF/37UYdf1M8nHf4+26+zvXqU86S9GriextJejeOHaceU+7+xYthjc63rQJ0QOyyesfKwfRS/zXJF62aHxaN8+PzQs6C584RcA8HHa8QT4nhCnEDwcX3wVBbXZoq6MO6Y+/NL1hFyJo1IvhbLi75za7JzrrnnVkx+H8+nIfh9o1qH0bl9QdfaRvW5FX3RZPnw+eF94Qq5BoKP94XUf64QJxB81BfSumyAc6JcAxf1ij1OqVcabA4Mm1/b7DFlvfLb4vL7yLI9kfZd93iXM8yvhxWsPwhDitfM+Z65n7sd32P3z/LzNsuf5nj4xDwP/bR7iNJD2kv3+/gmfcX4mTWseZK0g11DQO0QSTXE1zC7hnD1292fu4Z51nNR1Brdh/ZJaW2R+oj+NmC+zLiebQlxWkIciZUAWUsgawFkrYGsCZCVAFnjmua1BbJ2QNYGyKprrc6ArATIGgFZyLxWQNYUyKprTSD7cQ5kJUAWal0ljYHKi79zOvf30qXa5KV174+f377/Msy44HOMnFjzRAJXjEc/xCUhafOlGKf8VwKLC+R/93LqfAH7P7ycyowL2CovpxIgawlkLYCsNZA1AbISIGtc07y2QNYOyNoAWXWt1RmQlQBZIyALmdcKyJoCWXWtCWQ/zoGsBMhCrquofwRlxgWspDUuFbCSNqksYN1HEkAI2MYj/lMC9i/vFyO6PygAAA==",
  "debug_symbols": "tZrdihpBEEbfZa696Oq/qvJVQlhcHZcBUfEnEMR3j4omm81k4Pugb4SROnVzjgM2felW/fv5423YrnfHbv7t0m12y8Vp2G1vT5frrHs/DJvN8PH2+esu3D+SPOaP+8X2/ng8LQ6nbm5p1vXbVTd3vdHrYdN38xKu32ddiuB8AuczOF/A+QrOKzhv4Lxj8zmA86DfDPrNoN886ldCfgIifxGzkdFkr9mg8ns4xsf60nZ9bbte2663tuu96foS2q4XaP2diDCRYCLDRIGJChMKEwYTjhJ1PJD4ehdJqtOBmMvrtRXTlzyqtFweWy5PLZfnlstLy+W15XJtuFz/83uderupEowRjOOMBYIRgokEkwgmE0whGKIDIzowogMjOnCiAyc6cKIDJzpwogMnOnCiAyc6cKIDJzqQEBhIGCgyUGKgzECFgSoDKQMZAzFFCFOEMEUIU4QwRQhThDBFCFOEMEUIU4QwRUSmiMgUEZkiIlNEZIqITBGRKSIyRUSmiMgUkZgiElNEYopITBGJKSIxRSSmiMQUMX5CqlmfjFr4B3EYGT8nnUbGjzIn/onJ+GnmNFJwpOKI4ojhiMPI+CneNCI4EnEEt19w+wW3X3D7BbdfcPsFt19x+xW3X3H7FbdfcfsVt19x+xW3X3H7FbevuH3F7StuX3H7ittX3L7i9hW3r7h9xe0bbt9w+4bbN9y+4fYNt2+4fcPtG27fcPuO23fcvuP2HbfvuH3H7Ttu33H7jtt32H4MAUcERyKOJBzJ6D+LOH6ON41UDLnenn4sDsPifdM/L/2sz9vlpztAp5/7/st1oP1ht+xX50N/vxj0507Q47St+kzzbe1t9S8=",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::wrapping_mul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test(should_fail)]\n    fn test_wrapping_mul() {\n        // This currently fails.\n        // See: https://github.com/noir-lang/noir/issues/7528\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, wrapping_mul(zero, one));\n\n        // 0*1==0\n        assert_eq(zero, wrapping_mul(one, zero));\n\n        // 1*1==1\n        assert_eq(one, wrapping_mul(one, one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, wrapping_mul(zero, two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, wrapping_mul(two_pow_64, zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(two_pow_64, one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(one, two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, wrapping_mul(two_pow_64, two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, wrapping_mul(u128_max, u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "fn main() {\n    let _xs: Vec<Field> = Vec::new();\n    let _option: Option<Field> = Option::none();\n\n    print(\"42\\n\");\n    println(\"42\");\n}\n\nmod a {\n    // We don't want to give an error due to re-importing elements that are already in the prelude.\n    use std::collections::vec::Vec;\n    use std::option::Option;\n\n    fn main() {\n        let _xs = Vec::new();\n        let _option = Option::none();\n\n        print(\"42\\n\");\n        println(\"42\");\n    }\n}\n\nmod b {\n    fn main() {\n        let _xs = Vec::new();\n        let _option = Option::none();\n\n        print(\"42\\n\");\n        println(\"42\");\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
