tooling/nargo_cli/tests/snapshots/execute__tests__prelude_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "7888170613770555599",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/82aX27aQBDGdwEbbPPHQGNecgiDSaFvPPQibihSX6qq6gFyrL60Z2us7tib0cQQ+ZvII6HFWfKbb2fG9qzBmsasG0emgxHkrxsjNw68+eHz6+SO8262jZhfJP+Y7/eRsD6g/iJyTKvDz4mvFP987Difnxq+vxbyO3l+Jd77qWnqQ2v9lD/N9a9b1py4tf5uWauFaSnEtQL5u8iLH56flzPH8y9AlsUu0Mnj3jJ/hq3TMP8x04q+rlnmj/Tw+FCuKXahoDUV5ngNhoKfUPAjsQZAFsVct9YOX6R6wvF39bkSqvA/1vrHOvxPxJ/o8L8SP9Lh19fCWIVflMRPdOqz7gumOvw6PjMdfl3/c538Hoi/UOHvHomf6uiv+Usd/gPxVzr8I/HXKvyirv8POvV5pvvlnWmM9xqZ93fcvX17vrXXIP8x06rVa2RMD48P7zU2gtZUmOP38I3gZyP4kVgBkBUCWWMgawJkRUAWMvZxT3UlQNYUyJoBWX2t1TmQhayJRU91pUDWEsjqa00gz8cVkNXX6+oayKI+TuobKzu5Me9opFXqZaTnJm1rk3qfqoYoXz9+fvv+yzDjD694EDPPiSTg/pX/lx6KWe+9fzy8Mn8vsG55+KbUgBaW+TNGbojJ/3s9fLtjel4rIopdJmhNhTmeP6lYM8GPxOIaeL4r083f7Rsanj+roqc9f1aI61vzx8+vLvkLgKwQyBoDWRMgKwKykLGPe6orAbKmQNYMyOprrc6BLGRNLHqqKwWylkBWX2sCeT6ugKy+XlcHQBbf0Pjsyk5uzLtZ3csMBa1tGxrpi2MrfP7NGxruaHhFAGJDM7gyL21oqhsfNQujp2YO1Wgejv93m5UNHT8wLxNlmP+Aff6PO/aLnMZRB52XQ7m9FOWlfCjP5/1juWL8yvxfqfwDEEOBCgcmAAA=",
  "debug_symbols": "zdzLihpBGIbhe+m1izr8hypvJYTB0XZoEBUPgSDee7oHJ5jECLWZeTdC6fc3H1TxrNq6dKv+9fz2MmzXu2M3/3bpNrvl4jTstuPqcp11r4dhsxneXu6/7sL0EfN7/rhfbKfl8bQ4nLp5ybOu3666efVxej1s+m6u4fp91kVpzGtj3hrz3pgvjfnalk+hMR8b86kx37i/qXF/U+P+psb9TQ/3Nwa5DcT4x8TsQTSXj2zw+DucUlt46lJAXSqnSw6gLhHUJYG6ZFAXAXVRUBcDdQG5m0HuZpC7AnJXQO4KyF0BuSsgdwXkroDcFZC7AnJXQO4qyF0FuasgdxXkroLcVZC7CnJXQe4qyF0FuWsgdw3kroHcNZC7BnLXQO4ayF0DuWsgdw3kroPcdZC7DnLXQe46yF0Huesgdx3kroPcdZC7BeRuAblbQO4WkLsF5G4BuVtA7haQuwXkbgG5W0HuVpC7FeRuBblbQe5WkLsV5G4FuVtB7laQuzGA4I0BJG8MIHrHX0llQPjG8Kn6uvgt6yX8U8U4VZxTpXCqtMk7jcTQPhLbR1L7SG4fkfYRbR+x9hFvH3l8qtLHW+0x2/NTVWq8RWvKz8/Uf6PvRSqkyOO/QXxFkUgpkihFMqWIUIoopYhRijilCEXWRJE1U2TNFFkzRdZMkTVTZM0UWTNF1kyRNVNkzRRZhSKrUGQViqxCkVUosgpFVqHIKhRZhSKrUGRViqxKkVUpsipFVqXIqhRZlSKrUmRViqxKkdUoshpFVqPIahRZjSKrUWQ1iqxGkdUoshpFVqfI6hRZnSKrU2R1iqxOkdUpsjpFVqfI6p8o69MXX0qgFImUIolQ5DqufiwOw+J109/uDV2ft8u7a0RPP/f9XzeK7g+7Zb86H/rpbtG7a0WnPY5FZrHU8cHjw38B",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::wrapping_mul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test(should_fail)]\n    fn test_wrapping_mul() {\n        // This currently fails.\n        // See: https://github.com/noir-lang/noir/issues/7528\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, wrapping_mul(zero, one));\n\n        // 0*1==0\n        assert_eq(zero, wrapping_mul(one, zero));\n\n        // 1*1==1\n        assert_eq(one, wrapping_mul(one, one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, wrapping_mul(zero, two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, wrapping_mul(two_pow_64, zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(two_pow_64, one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(one, two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, wrapping_mul(two_pow_64, two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, wrapping_mul(u128_max, u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "fn main() {\n    let _xs: Vec<Field> = Vec::new();\n    let _option: Option<Field> = Option::none();\n\n    print(\"42\\n\");\n    println(\"42\");\n}\n\nmod a {\n    // We don't want to give an error due to re-importing elements that are already in the prelude.\n    use std::collections::vec::Vec;\n    use std::option::Option;\n\n    fn main() {\n        let _xs = Vec::new();\n        let _option = Option::none();\n\n        print(\"42\\n\");\n        println(\"42\");\n    }\n}\n\nmod b {\n    fn main() {\n        let _xs = Vec::new();\n        let _option = Option::none();\n\n        print(\"42\\n\");\n        println(\"42\");\n    }\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/prelude/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
